--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
     "typescript": "5.0.3"
   },
   "devDependencies": {
@@ -26,6 +28,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/testing-library__jest-dom": "^5.14.5",
     "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0"
+    "jest-environment-jsdom": "^29.5.0",
+    "prisma": "^4.12.0"
   }
 }
